[metadata]
name = cacheout
version = 0.11.1
author = Derrick Gilland
author_email = dgilland@gmail.com
url = https://github.com/dgilland/cacheout
description = A caching library for Python
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = cacheout cache caching memoize memoization fifo lifo lfu lru mru
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Database
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage
    flake8
    pylint
    pytest
    pytest-cov
    Sphinx
    sphinx-rtd-theme
    tox
    twine
    wheel


[bdist_wheel]
python-tag = py3
