[metadata]
name = cacheout
version = attr: cacheout.__version__
author = Derrick Gilland
author_email = dgilland@gmail.com
url = https://github.com/dgilland/cacheout
description = A caching library for Python
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = cacheout cache caching memoize memoization fifo lifo lfu lru mru
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    build
    coverage
    docformatter
    flake8
    flake8-black
    flake8-bugbear
    flake8-isort
    furo
    importlib_metadata<5; python_version=="3.7"
    invoke
    isort
    mypy
    pylint
    pytest
    pytest-asyncio
    pytest-cov
    sphinx
    sphinx-autodoc-typehints
    tox
    twine
    wheel


[bdist_wheel]
python_tag = py3

[flake8]
exclude = .tox,venv,env
max_line_length = 100
max_complexity = 12
# F401 - `module` imported but unused
# F811 - redefinition of unused `name` from line `N`
# E203 - whitespace before ':'
# W503 - line break before binary operator
ignore = F401,F811,E203,W503

[mypy]
show_column_numbers = true
show_error_context = false
ignore_missing_imports = true
warn_return_any = false
strict_optional = true
warn_no_return = true
warn_redundant_casts = false
warn_unused_ignores = false

[tool:isort]
line_length = 100
multi_line_output = 3
lines_after_imports = 2
combine_as_imports = true
include_trailing_comma = true
force_sort_within_sections = true

[tool:pytest]
junit_family = xunit2
asyncio_mode = auto
addopts =
    --verbose
    --doctest-modules
    --no-cov-on-fail
    --cov-fail-under=100
    --cov-report=term-missing
    --cov-report=xml:build/coverage/coverage.xml
    --cov-report=html:build/coverage
    --junitxml=build/testresults/junit.xml

[coverage:run]
omit =
    */tests/*
    */test_*
